--- a/package.json
+++ b/package.json
@@ -12,17 +12,11 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
-    "cluster": "^0.7.7",
     "express": "~4.13.3",
-    "mongodb": "^2.1.4",
-    "pm2": "^1.1.3",
-    "vash": "~0.11.0",
-    "compression": "~1.6.2"
+    "vash": "~0.11.0"
   },
   "devDependencies": {
     "bower": "^1.8.0",
-    "grunt": "~0.4.5",
-    "grunt-cssnano": "^2.1.0",
-    "grunt-nodemon": "~0.4.1"
+    "grunt": "~0.4.5"
   }
 }
